--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -8,17 +8,16 @@
   top: 15px;
   border-radius: 5px;
   padding: 0 10px;
-  
 }
 .btn-js:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 .title-name {
-  padding: 10px;
+  margin-bottom: 5px;
   color: #e36858;
 }
 .title-info {
-  padding: 10px;
+  margin-top: 2px;
   text-align: center;
   color: #0c0d0d;
 }
